We are now using vectors to represent position, velocity, etc. Added my quick-n-dirty 2D vector library. Refactored geometry code.

--- a/2.0/Makefile
+++ b/2.0/Makefile
@@ -26,7 +26,7 @@ AUTODEPSFLAGS = -MM $(CXXFLAGS)
 EXE := navalngage
 TARGETS += $(EXE)
 
-SRCDIRS :=common core render components go systems game
+SRCDIRS :=common core render components go systems game math
 
 # For convenience, allow all of our source directories to be valid include paths
 define ADD_INCLUDE
