YES! After breaking my head over it, I've FINALLY got the world-to-screen transformation working! Now, I need to refactor the camera and continue with building components and systems.

--- a/2.0/Makefile
+++ b/2.0/Makefile
@@ -17,7 +17,8 @@ LDMATH := -lm
 ### Flags ###
 
 # CXXFLAGS is lazy expanded to allow for modification of HEADERS
-CXXFLAGS = -Wall -pedantic -g -std=c++11 $(HEADERS)
+# Note: -Wmissing-braces may be safely disabled as per http://stackoverflow.com/questions/13905200/is-it-wise-to-ignore-gcc-clangs-wmissing-braces-warning
+CXXFLAGS = -Wall -Wextra -Wno-missing-braces -pedantic -g -std=c++11 $(HEADERS)
 LDFLAGS := $(LDFLAGS) $(LDSDL) -L/usr/local/lib $(LDMATH)
 AUTODEPSFLAGS = -MM $(CXXFLAGS)
 
