Improved SDL dependency specification in makefile.

--- a/2.0/Makefile
+++ b/2.0/Makefile
@@ -11,14 +11,14 @@ HEADERS := $(HEADERS) -I/usr/local/include
 
 ### Libraries ###
 
-LDSDL := `sdl2-config --libs`
+LDSDL := $(shell sdl2-config --libs)
 LDMATH := -lm
 
 ### Flags ###
 
 # CXXFLAGS is lazy expanded to allow for modification of HEADERS
 # Note: -Wmissing-braces may be safely disabled as per http://stackoverflow.com/questions/13905200/is-it-wise-to-ignore-gcc-clangs-wmissing-braces-warning
-CXXFLAGS = -Wall -Wextra -Wno-missing-braces -pedantic -g -std=c++11 $(HEADERS)
+CXXFLAGS = -Wall -Wextra -Wno-missing-braces -pedantic -g -std=c++11 $(shell sdl2-config --cflags) $(HEADERS)
 LDFLAGS := $(LDFLAGS) $(LDSDL) -L/usr/local/lib $(LDMATH)
 AUTODEPSFLAGS = -MM $(CXXFLAGS)
 
