Fixed #1. Used the spdlog library (courtesy of @gabime) to implement efficient concurrent logging. Also, added the -O3 flag to gmake for some compiler optimization goodness. Remember to remove this flag when debugging if needed.

--- a/2.0/Makefile
+++ b/2.0/Makefile
@@ -18,7 +18,7 @@ LDMATH := -lm
 
 # CXXFLAGS is lazy expanded to allow for modification of HEADERS
 # Note: -Wmissing-braces may be safely disabled as per http://stackoverflow.com/questions/13905200/is-it-wise-to-ignore-gcc-clangs-wmissing-braces-warning
-CXXFLAGS = -Wall -Wextra -Wno-missing-braces -pedantic -g -std=c++11 $(shell sdl2-config --cflags) $(HEADERS)
+CXXFLAGS = -Wall -Wextra -Wno-missing-braces -pedantic -g -std=c++11 $(shell sdl2-config --cflags) $(HEADERS) -pthread -O3
 LDFLAGS := $(LDFLAGS) $(LDSDL) -L/usr/local/lib $(LDMATH)
 AUTODEPSFLAGS = -MM $(CXXFLAGS)
 
@@ -27,7 +27,7 @@ AUTODEPSFLAGS = -MM $(CXXFLAGS)
 EXE := navalngage
 TARGETS += $(EXE)
 
-SRCDIRS :=common core render components go systems game math
+SRCDIRS :=common 3rdparty core render components go systems game math
 
 # For convenience, allow all of our source directories to be valid include paths
 define ADD_INCLUDE
